--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility1 = sourceCompatibility
+    targetCompatibility1 = targetCompatibility
+    sourceCompatibility2 = sourceCompatibility1
+    targetCompatibility2 = targetCompatibility1
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
