--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.type.watch"/>
 
     <application
         android:allowBackup="true"
@@ -18,7 +19,7 @@
         <meta-data
             android:name="com.google.android.actions" />
 
-        //activity android:name=".WeatherForecast"
+        <activity android:name=".WeatherForecast"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
